ref: introduce stronger typisation to chat api context
